--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "express-handlebars": "^8.0.1",
     "handlebars-helpers": "^0.10.0",
     "mongoose": "^8.6.3",
+    "multer": "^1.4.5-lts.1",
     "sharp": "^0.33.5"
   }
 }
