--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "dependencies": {
-    "bcryptjs": "^5.1.1",
-    "bcryptjsjs": "^2.4.3",
+    "bcrypt": "^5.1.1",
+    "bcrypt": "^5.1.1",
+    "bcrypt": "^2.4.3",
     "body-parser": "^1.20.3",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
